--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -137,7 +137,8 @@ p {
 #tm-section-6 {
 	background-image: url('../img/bg-img-3.jpg');
 	background-position: top center;
-	padding-top: 120px;
+	margin-top:50px;
+	/*padding-top: 120px;*/
 	padding-bottom: 60px;
 }
 
@@ -412,7 +413,7 @@ video {
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -100;
+   /* z-index: -100;*/
     transform: translateX(-50%) translateY(-50%);
     background-size: cover;
     transition: 1s opacity;
